--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Mukta&display=swap');
 
 .navbar {
-    overflow: hidden;
     position: fixed;
     top: 0;
     width: 100%;
@@ -39,14 +38,22 @@ body:not(.navbar) {
 .text {
     font-size: 18px;
     color: #000000;
+    width: 40%;
+    overflow-wrap: break-word;
 }
 
 #text1 {
     margin-top: 5%;
-    width: 50%;
 }
 
 #print-money {
     margin-left: 60%;
     position: absolute;
+}
+
+.v1 {
+    border-left: 6px solid #000000;
+    height: 500px;
+    position: absolute;
+    /*Set margin left based on amount of words*/
 }
